# dxx-rebirth-android

./: .gitignore
android/: Dockerfile.emulator  DxxActivity.java  ICON.md  build-android.sh  gen_icon.py  test-emulator.sh
android/app/jni/src/: CMakeLists.txt  build_env_stubs.cpp  dxxsconf.h  kconfig.udlr.h
common/arch/ogl/: ogl_extensions.cpp  ogl_sync.cpp
common/arch/sdl/: event.cpp  joy.cpp  touch.cpp
common/include/: 3d.h  d_gl.h  ogl_extensions.h  touch.h  touch_icons.h
common/main/: config.h
common/music/: adlmidi_dynamic.cpp
similar/arch/ogl/: gr.cpp  ogl.cpp
similar/arch/sdl/: init.cpp
similar/arch/vk/: vk_common.h  vk_gr.cpp  vk_init.cpp  vk_pipeline.cpp  vk_renderer.cpp  vk_shaders.cpp  vk_texture.cpp
similar/arch/vk/shaders/: basic.frag  basic.vert  textured.frag  textured.vert
similar/main/: config.cpp  fireball.cpp  kconfig.cpp  laser.cpp  menu.cpp  multi.cpp  net_udp.cpp  playsave.cpp  render.cpp  state.cpp  wall.cpp
similar/misc/: physfsx.cpp
